<resources>
    <string name="app_name">Auth</string>
    <string name="icon">Icon</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="update_profile">Update Profile</string>
    <string name="send_otp">Send OTP</string>
    <string name="contact_no">Contact No</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="signup_register">Signup/Register</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="google">Google</string>
    <string name="mobile_no">Mobile NO</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="verify">Verify</string>
    <string name="didn_t_receive_code_resend_otp">Didn\'t Receive Code? Resend OTP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>