<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".login">

    <ImageView
        android:id="@+id/Icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="26dp"
        android:contentDescription="@string/icon"
        app:srcCompat="@drawable/chat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="@string/email"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="9dp"
            android:textColor="@color/black"
            android:textColorHint="#808080 " />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/password"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="9dp"
            android:textColor="@color/black"
            android:textColorHint="#808080 " />

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="6dp"
            android:padding="14dp"
            android:text="@string/sign_in"
            app:backgroundTint="#0293DA"
            app:cornerRadius="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonGoogle"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_icons8_google"
                android:padding="14dp"
                android:text="@string/google"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                app:cornerRadius="4dp"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/buttonContactNo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic__msg"
                android:padding="14dp"
                android:text="@string/mobile_no"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                app:cornerRadius="4dp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/signup_register"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>