<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".contact_no">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="40dp">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/contactNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:autofillHints="@string/contact_no"
            android:backgroundTint="@color/black"
            android:hint="@string/contact_no"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="#808080 "
            tools:targetApi="lollipop" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/username"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="#808080"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSendOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_otp" />

</LinearLayout>